--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     background-color:  rgb(224, 249, 250);
     
 } */
+ *{
+margin:0;
+ }
 h1{
     color:rgb(14, 12, 112);
 }
@@ -27,3 +30,29 @@ color: rgb(98, 0, 255);
   background-color: rgb(178, 229, 249);
   padding: 8px;
 }
+#sample{
+    background-color: rgb(195, 210, 230);
+    border-color:3px rgba(0,0,0,0.027) solid;
+    border:5px rgba(200, 179, 167, 0.774) outset;
+}
+.line{
+    border-style: dotted;
+    margin: 10px 15px;
+    padding: 30px;
+                     
+}
+/* My flex properties */
+.container{
+    background-color:rgba(174, 249, 240, 0.913);
+    font-size: 20px;
+    font-display: ;
+}
+.childContainer{
+background-color: rgb(229, 253, 217); 
+display:flex;
+/* flex-direction: row; */
+gap: 800px;
+/* justify-content: space-between; */
+
+}
+ 
